--- a/index.html
+++ b/index.html
@@ -2,212 +2,212 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>S-LEVEL_COMMAND_TERMINAL</title>
+    <title>COMMAND_TERMINAL_V6</title>
     <style>
         :root {
-            --militray-yellow: #f4d03f;
-            --cyber-cyan: #00f2ff;
-            --danger-red: #ff3c41;
-            --bg-deep: #02080a;
-            --glass: rgba(0, 20, 30, 0.7);
+            --m-yellow: #f1c40f;
+            --m-yellow-glow: rgba(241, 196, 15, 0.4);
+            --c-cyan: #00f2ff;
+            --bg-dark: #020608;
+            --glass-panel: rgba(0, 15, 20, 0.8);
         }
 
         body, html {
             margin: 0; padding: 0;
-            background-color: var(--bg-deep);
-            color: #fff;
-            font-family: 'Courier New', Courier, monospace;
+            background-color: var(--bg-dark);
+            color: white;
+            font-family: 'Share Tech Mono', 'Courier New', monospace;
             height: 100vh; overflow: hidden;
             display: flex; justify-content: center; align-items: center;
         }
 
-        /* 1. CRT 弧形感与噪点层 */
-        .screen-effect {
-            position: fixed; inset: 0;
-            background: 
-                radial-gradient(circle at center, transparent 30%, rgba(0,0,0,0.4) 100%),
-                linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%),
-                linear-gradient(90deg, rgba(255, 0, 0, 0.02), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.02));
-            background-size: 100% 100%, 100% 3px, 3px 100%;
-            pointer-events: none; z-index: 1000;
-        }
-
-        /* 2. 背景网格 */
-        .military-grid {
+        /* 1. 深度网格与扫描背景 */
+        .mil-grid {
             position: fixed; inset: 0;
             background-image: 
-                linear-gradient(rgba(0, 242, 255, 0.05) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1px, transparent 1px);
-            background-size: 40px 40px;
+                linear-gradient(rgba(0, 242, 255, 0.05) 1.5px, transparent 1.5px),
+                linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1.5px, transparent 1.5px);
+            background-size: 60px 60px;
             z-index: -1;
+        }
+        .mil-grid::after {
+            content: ""; position: absolute; inset: 0;
+            background: radial-gradient(circle at center, transparent 20%, #000 90%);
+        }
+
+        /* 2. 强化的动态扫描线 */
+        .scanner-beam {
+            position: fixed; top: 0; left: 0; width: 100%; height: 5px;
+            background: linear-gradient(to bottom, transparent, var(--c-cyan), transparent);
+            box-shadow: 0 0 25px var(--c-cyan);
+            opacity: 0.5; z-index: 100;
+            animation: scanMove 5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+        }
+        @keyframes scanMove {
+            0% { top: -10%; }
+            100% { top: 110%; }
         }
 
         /* 3. 核心布局 */
-        .terminal-frame {
+        .terminal-container {
             width: 95vw; height: 90vh;
             display: grid;
-            grid-template-columns: 300px 1fr 300px;
-            grid-template-rows: 1fr auto;
-            gap: 20px;
-            padding: 20px;
+            grid-template-columns: 280px 1fr 280px;
+            gap: 30px; padding: 25px;
             box-sizing: border-box;
-            border: 2px solid rgba(0, 242, 255, 0.1);
-            position: relative;
-        }
-
-        /* 中央 Logo 区域 */
-        .logo-center {
-            display: flex; flex-direction: column;
-            justify-content: center; align-items: center;
-            position: relative;
-        }
-
-        .main-logo {
-            width: 180px; height: 180px;
-            filter: drop-shadow(0 0 15px var(--militray-yellow));
-            animation: logo-glow 3s infinite alternate;
-        }
-
-        @keyframes logo-glow {
-            0% { filter: drop-shadow(0 0 10px var(--militray-yellow)) brightness(1); }
-            100% { filter: drop-shadow(0 0 30px var(--militray-yellow)) brightness(1.2); }
-        }
-
-        /* 磁贴卡片 - 军事化定制 */
-        .card-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-            margin-top: 40px;
-        }
-
-        .mil-card {
-            background: var(--glass);
-            border: 1px solid var(--cyber-cyan);
-            padding: 20px;
-            clip-path: polygon(0 0, 100% 0, 100% 85%, 90% 100%, 0 100%);
-            transition: 0.3s;
-            cursor: pointer;
+            border: 1px solid rgba(0, 242, 255, 0.1);
             backdrop-filter: blur(5px);
         }
 
-        .mil-card:hover {
-            background: rgba(0, 242, 255, 0.15);
-            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2);
-            transform: translateY(-3px);
+        /* 4. 黄色闪电图标 - 纯代码复刻 */
+        .logo-section {
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
         }
 
-        .mil-card h3 { 
-            margin: 0; color: var(--cyber-cyan); 
-            font-size: 1.1rem; letter-spacing: 2px;
-        }
-        
-        .mil-card.danger { border-color: var(--danger-red); }
-        .mil-card.danger h3 { color: var(--danger-red); }
-
-        /* 左右面板 */
-        .side-panel {
-            display: flex; flex-direction: column; gap: 15px;
-            font-size: 12px; color: var(--cyber-cyan);
-        }
-
-        .module-box {
-            border: 1px solid rgba(0, 242, 255, 0.2);
-            padding: 15px;
-            background: rgba(0,0,0,0.3);
-        }
-
-        .status-bar {
-            height: 4px; background: #111; margin-top: 8px;
+        .icon-hex {
+            width: 200px; height: 200px;
             position: relative;
-        }
-        .status-fill {
-            height: 100%; background: var(--cyber-cyan);
-            box-shadow: 0 0 10px var(--cyber-cyan);
+            filter: drop-shadow(0 0 20px var(--m-yellow-glow));
+            animation: glitch-glow 4s infinite;
         }
 
-        /* 底部信息流 */
-        .footer-info {
-            grid-column: 1 / 4;
-            border-top: 1px solid rgba(0, 242, 255, 0.2);
-            padding-top: 10px;
-            font-size: 10px;
-            display: flex; justify-content: space-between;
-            color: rgba(255,255,255,0.4);
+        @keyframes glitch-glow {
+            0%, 100% { filter: drop-shadow(0 0 15px var(--m-yellow-glow)) brightness(1); }
+            50% { filter: drop-shadow(0 0 35px var(--m-yellow)) brightness(1.3); }
+            98% { transform: skew(0deg); }
+            99% { transform: skew(10deg); filter: hue-rotate(90deg); }
+        }
+
+        /* 5. 军事磁贴样式 */
+        .mil-hub {
+            display: grid; grid-template-columns: repeat(2, 1fr);
+            gap: 20px; margin-top: 50px;
+        }
+
+        .mil-card {
+            background: var(--glass-panel);
+            border: 1px solid rgba(0, 242, 255, 0.2);
+            padding: 25px;
+            position: relative;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 90% 100%, 0 100%);
+            transition: 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+            cursor: pointer;
+        }
+
+        .mil-card:hover {
+            border-color: var(--c-cyan);
+            background: rgba(0, 242, 255, 0.1);
+            transform: translateY(-5px);
+            box-shadow: inset 0 0 20px rgba(0, 242, 255, 0.2);
+        }
+
+        .mil-card h2 { margin: 0; font-size: 1.5rem; letter-spacing: 3px; color: var(--c-cyan); }
+        .mil-card p { margin: 10px 0 0; font-size: 0.8rem; color: rgba(255,255,255,0.5); }
+
+        .mil-card.admin { border-left: 4px solid #ff3c41; }
+        .mil-card.admin h2 { color: #ff3c41; }
+
+        /* 6. 侧边监控细节 */
+        .monitor-box {
+            border: 1px solid rgba(0, 242, 255, 0.1);
+            background: rgba(0,0,0,0.4);
+            padding: 15px; font-size: 10px; color: var(--c-cyan);
+            letter-spacing: 1px;
+        }
+
+        .progress-bar {
+            height: 2px; background: #111; margin: 10px 0;
+            overflow: hidden;
+        }
+        .progress-fill {
+            height: 100%; background: var(--c-cyan);
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% { opacity: 0.4; width: 30%; } 50% { opacity: 1; width: 70%; } 100% { opacity: 0.4; width: 30%; }
         }
     </style>
 </head>
-<body onclick="initSystem()">
+<body onclick="initAudio()">
 
-    <div class="screen-effect"></div>
-    <div class="military-grid"></div>
+    <div class="mil-grid"></div>
+    <div class="scanner-beam"></div>
 
-    <div class="terminal-frame">
-        <aside class="side-panel">
-            <div class="module-box">
-                <div>SYSTEM STATUS</div>
-                <div style="font-size: 20px; margin: 10px 0;">ONLINE 98%</div>
-                <div class="status-bar"><div class="status-fill" style="width: 98%;"></div></div>
+    <div class="terminal-container">
+        <aside style="display: flex; flex-direction: column; gap: 20px;">
+            <div class="monitor-box">
+                <div style="display: flex; justify-content: space-between;">
+                    <span>SYSTEM_OS</span>
+                    <span>V.4.2.0</span>
+                </div>
+                <div class="progress-bar"><div class="progress-fill"></div></div>
+                <div style="color: #ff3c41;">STATUS: THREAT_DETECTED</div>
             </div>
-            <div class="module-box" style="flex-grow: 1;">
-                <div style="opacity: 0.5;">DECRYPTING_DATA_FLOW...</div>
-                <div id="logs" style="margin-top: 10px; color: #aaa;"></div>
+            <div class="monitor-box" style="flex-grow: 1; opacity: 0.6; font-family: monospace;" id="code-stream">
+                // 初始化加密协议...<br>
+                // 正在链接卫星 2988-Z...<br>
             </div>
         </aside>
 
-        <main class="logo-center">
-            <img src="https://via.placeholder.com/180/02080a/f4d03f?text=A" class="main-logo" alt="LOGO">
-            
-            <div class="card-container">
+        <main class="logo-section">
+            <div class="icon-hex">
+                <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M50 5L90 25V75L50 95L10 75V25L50 5Z" stroke="#f1c40f" stroke-width="4" stroke-linejoin="round"/>
+                    <path d="M55 20L35 50H50L45 80L65 50H50L55 20Z" fill="#f1c40f">
+                        <animate attributeName="opacity" values="1;0.7;1" dur="2s" repeatCount="indefinite" />
+                    </path>
+                    <rect x="85" y="45" width="8" height="2" fill="#f1c40f" />
+                    <rect x="5" y="50" width="6" height="1" fill="#f1c40f" />
+                </svg>
+            </div>
+
+            <div class="mil-hub">
                 <div class="mil-card" onmouseenter="playBeep()">
-                    <h3>全服聊天</h3>
-                    <div style="font-size: 9px; opacity: 0.6; margin-top: 5px;">> GLOBAL_VOX_ACTIVE</div>
+                    <h2>全服聊天</h2>
+                    <p>> BROADCAST_NET_ENCRYPTED</p>
                 </div>
                 <div class="mil-card" onmouseenter="playBeep()">
-                    <h3>物资交易</h3>
-                    <div style="font-size: 9px; opacity: 0.6; margin-top: 5px;">> P2P_MARKET_NODE</div>
+                    <h2>物资交易</h2>
+                    <p>> P2P_LOGISTICS_STATION</p>
                 </div>
                 <div class="mil-card" onmouseenter="playBeep()">
-                    <h3>加密私聊</h3>
-                    <div style="font-size: 9px; opacity: 0.6; margin-top: 5px;">> RSA_4096_SECURE</div>
+                    <h2>加密私聊</h2>
+                    <p>> SECURE_CHANNEL_ALPHA</p>
                 </div>
-                <div class="mil-card danger" onmouseenter="playWarn()">
-                    <h3>管理终端</h3>
-                    <div style="font-size: 9px; opacity: 0.8; margin-top: 5px;">> ROOT_OVERRIDE</div>
+                <div class="mil-card admin" onmouseenter="playWarn()">
+                    <h2>管理终端</h2>
+                    <p>> ROOT_COMMAND_ONLY</p>
                 </div>
             </div>
         </main>
 
-        <aside class="side-panel">
-            <div class="module-box">
-                <div>ENCRYPTION STATUS</div>
-                <div style="margin-top:10px;">AES-256: [ACTIVE]</div>
-                <div style="margin-top:5px;">KEY_STRENGTH: 99.2%</div>
-            </div>
-            <div class="module-box" style="height: 150px; display: flex; align-items: center; justify-content: center;">
-                <div style="width: 100px; height: 100px; border: 1px solid var(--cyber-cyan); border-radius: 50%; position: relative;">
-                    <div style="position: absolute; width: 50%; height: 1px; background: var(--cyber-cyan); top: 50%; left: 50%; transform-origin: left center; animation: radar 4s linear infinite;"></div>
+        <aside style="display: flex; flex-direction: column; gap: 20px;">
+            <div class="monitor-box" style="text-align: center;">
+                <div style="font-size: 14px; margin-bottom: 10px;">TACTICAL_RADAR</div>
+                <div style="width: 120px; height: 120px; border: 1px solid var(--c-cyan); border-radius: 50%; margin: 0 auto; position: relative;">
+                    <div style="position: absolute; width: 50%; height: 2px; background: var(--c-cyan); top: 50%; left: 50%; transform-origin: left center; animation: radar 4s linear infinite;"></div>
                 </div>
             </div>
+            <div class="monitor-box">
+                <div>COORD: 2988-Z8601</div>
+                <div>SIGNAL: [|||||.....]</div>
+                <div id="time-clock" style="font-size: 18px; margin-top: 10px;">00:00:00</div>
+            </div>
         </aside>
-
-        <footer class="footer-info">
-            <div>NODE: TERMINAL_04 // LOC: 40.7128N 74.0060W</div>
-            <div>UNAUTHORIZED ACCESS IS PROHIBITED BY MILITARY LAW</div>
-        </footer>
     </div>
 
     <script>
         let audioCtx;
 
-        function initSystem() {
+        function initAudio() {
             if(!audioCtx) {
                 audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-                // 持续的低频背景声
+                // 背景低频白噪音
                 const osc = audioCtx.createOscillator();
                 const g = audioCtx.createGain();
-                osc.type = 'sine'; osc.frequency.value = 50;
-                g.gain.value = 0.01;
+                osc.type = 'sine'; osc.frequency.value = 40;
+                g.gain.value = 0.005;
                 osc.connect(g).connect(audioCtx.destination);
                 osc.start();
             }
@@ -218,7 +218,7 @@
             const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
             o.frequency.value = 1000;
-            g.gain.setTargetAtTime(0.05, audioCtx.currentTime, 0.01);
+            g.gain.setTargetAtTime(0.03, audioCtx.currentTime, 0.01);
             g.gain.setTargetAtTime(0, audioCtx.currentTime + 0.05, 0.01);
             o.connect(g).connect(audioCtx.destination);
             o.start(); o.stop(audioCtx.currentTime + 0.1);
@@ -228,21 +228,22 @@
             if(!audioCtx) return;
             const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
-            o.type = 'sawtooth'; o.frequency.value = 150;
-            g.gain.setValueAtTime(0.1, audioCtx.currentTime);
+            o.type = 'sawtooth'; o.frequency.value = 120;
+            g.gain.setValueAtTime(0.05, audioCtx.currentTime);
             g.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.3);
             o.connect(g).connect(audioCtx.destination);
             o.start(); o.stop(audioCtx.currentTime + 0.3);
         }
 
-        // 模拟滚动日志
+        // 动态时钟与流代码
         setInterval(() => {
-            const logs = document.getElementById('logs');
-            const p = document.createElement('div');
-            p.innerText = `>> ${Math.random().toString(16).substr(2, 8).toUpperCase()}_RECEIVED`;
-            logs.prepend(p);
-            if(logs.childNodes.length > 20) logs.lastChild.remove();
-        }, 1500);
+            document.getElementById('time-clock').innerText = new Date().toLocaleTimeString('en-GB');
+            const stream = document.getElementById('code-stream');
+            const hex = "0123456789ABCDEF";
+            let line = "> PKT_INF: " + Array.from({length:8}, () => hex[Math.floor(Math.random()*16)]).join('');
+            stream.innerHTML += `<div>${line}</div>`;
+            if(stream.childNodes.length > 25) stream.firstChild.remove();
+        }, 800);
     </script>
 
     <style>
